can set the counter to zero

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                             }, 1000);
                             ">
                  <h2 class="h2" x-text="countdown"></h2>
+                 <button  @click="countdown=0">Stop Counter</button>
                 </div>
             </li>
 
